force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessed_Buildings_Values__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessed_Buildings_Values__c</fullName>
    <label>Assessed Buildings Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>