force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessed_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessed_Value_Total__c</fullName>
    <formula>MUSW__Assessed_Buildings_Values__c +  MUSW__Assessed_Land_Value__c +  MUSW__Improvement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessed Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>