force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Address__c</fullName>
    <label>Assessor Owner Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>