force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_City__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_City__c</fullName>
    <label>Assessor Owner City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>