force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Post_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Post_Zip_Code__c</fullName>
    <label>Assessor Owner Post/Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>