force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Block_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Block_Number__c</fullName>
    <label>Block</label>
    <length>40</length>
    <type>Text</type>
</CustomField>