force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Building_Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Building_Floor_Area__c</fullName>
    <inlineHelpText>Square Feet, or Meters Squared</inlineHelpText>
    <label>Building Floor Area</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>