force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Current_Land_Use__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Current_Land_Use__c</fullName>
    <label>Current Land Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>