force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Date_Last_Sold__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Date_Last_Sold__c</fullName>
    <label>Date Last Sold</label>
    <type>Date</type>
</CustomField>