force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__District__c.field-meta.xml
<CustomField>
    <fullName>MUSW__District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>District 1</fullName>
            </value>
            <value>
                <fullName>District 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>