force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Improvement_Value__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Improvement_Value__c</fullName>
    <label>Assessed Improvement Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>