force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Legal_Description__c</fullName>
    <label>Legal Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>