force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Location__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Location__c</fullName>
    <formula>MUSW__Street__c   &amp; " " &amp;  MUSW__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>