force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Parcel_Number2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Number2__c</fullName>
    <externalId>true</externalId>
    <label>Parcel Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>