force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Number__c</fullName>
    <description>Uniqueness not required, searchable under Parcel advanced search only</description>
    <label>Parcel Number Alternate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>