force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Parent_Parcel__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parent_Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Parcel</label>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Related Parcels</relationshipLabel>
    <relationshipName>Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>