force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Planning_Area__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Planning_Area__c</fullName>
    <label>Planning Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning Area 1</fullName>
            </value>
            <value>
                <fullName>Planning Area 2</fullName>
            </value>
            <value>
                <fullName>Planning Area 3</fullName>
            </value>
            <value>
                <fullName>Planning Area 4</fullName>
            </value>
            <value>
                <fullName>Planning Area 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>