force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Post_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Post_Zip_Code__c</fullName>
    <label>Post/Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>