force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels2</relationshipName>
    <type>Lookup</type>
</CustomField>