force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Contact_Name__c</fullName>
    <label>Primary Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>