force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Secondary_Zoning__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Secondary_Zoning__c</fullName>
    <label>Secondary Zoning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R1 - Residential Zoning Type I</fullName>
            </value>
            <value>
                <fullName>R2 - Residential Zoning Type II</fullName>
            </value>
            <value>
                <fullName>C1 - Commercial Zoning Type I</fullName>
            </value>
            <value>
                <fullName>C2 - Commercial Zoning Type II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>