force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street2__c</fullName>
    <label>Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>