force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street__c</fullName>
    <formula>IF(MUSW__Street2__c !=  "", IF( MUSW__Street_Number__c != "",MUSW__Street_Number__c &amp; " ","") &amp;  IF( MUSW__Street_Direction__c != "",MUSW__Street_Direction__c &amp; " ","") &amp; MUSW__Street2__c &amp; IF(MUSW__Street_Suffix__c != ""," " &amp; MUSW__Street_Suffix__c,"") &amp; IF( MUSW__Unit__c != "", " " &amp; IF(MUSW__Unit_Type__c != "", MUSW__Unit_Type__c &amp; " ", "#") &amp; MUSW__Unit__c,""), Name)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>