force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street_Direction__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Direction__c</fullName>
    <label>Street Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>