force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Number__c</fullName>
    <label>Street Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>