force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street_Suffix__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Suffix__c</fullName>
    <label>Street Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>