force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Subdivision__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Subdivision__c</fullName>
    <label>Subdivision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subdivision 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>