force-app/main/default/objects/MUSW__Parcel__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Parcel_Number2__c</columns>
    <columns>MUSW__Street2__c</columns>
    <columns>MUSW__Alert_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>